--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -35,7 +35,7 @@
 								<span t-field="o.partner_id.eq_creditor_ref" id="eq_creditor_ref"/>
 							</td>
 						</tr>
-						<tr t-if="o.type in ('out_invoice', 'in_refund', 'out_refund'">
+						<tr t-if="o.type in ('out_invoice', 'in_refund', 'out_refund')">
 							<td>
 								<span>Customer no.</span>
 							</td>
