--- a/equitania/views/eq_report_purchase_order.xml
+++ b/equitania/views/eq_report_purchase_order.xml
@@ -251,11 +251,12 @@
                             <td class="text-right">
                                 <strong>Total without taxes<!-- Preis Netto --></strong>
                             </td>
-                            <td class="text-right">
-                                <strong>
-                                    <span t-esc="', '.join(map(lambda x: x.name, o.order_line[0].taxes_id))"/>
-                                </strong>
-                            </td>
+							<!--  NEUE STEUERSPALTE -->
+							<td class="text-right" t-foreach="set([x.taxes_id for x in o.order_line])" t-as="tax_line">
+								<strong>
+									<span t-esc="tax_line.name" />
+								</strong>
+							</td>
                             <td class="text-right">
                                 <strong>Total sum<!-- Preis Brutto --></strong>
                             </td>
@@ -266,9 +267,13 @@
                             <td class="text-right">
                                 <span t-esc="get_standard_price(o.amount_untaxed, o.partner_id.lang, o.currency_id)"/>
                             </td>
-                            <td class="text-right">
-                                <span t-esc="get_standard_price(o.amount_tax, o.partner_id.lang, o.currency_id)"/>
-                            </td>
+							<!--  NEUE STEUERSPALTE -->
+							<td class="text-right" t-foreach="set([x.taxes_id for x in o.order_line])" t-as="tax_line">
+								<strong>
+									<span
+								t-esc="get_tax(o, tax_line, o.partner_id.lang, o.currency_id)" />
+								</strong>
+							</td>
                             <td class="text-right">
                                 <span t-esc="get_standard_price(o.amount_total, o.partner_id.lang, o.currency_id)"/>
                             </td>
