--- a/equitania/views/eq_report_invoice.xml
+++ b/equitania/views/eq_report_invoice.xml
@@ -428,11 +428,19 @@
 									<td class="text-right" id="price_netto">
 										<strong>Total without taxes</strong>
 									</td>
+									<!--  NEUE STEUERSPALTE -->
+									<td class="text-right" t-foreach="o.tax_line" t-as="tax_line">
+										<strong>
+											<span t-esc="tax_line.name" />
+										</strong>
+									</td>
+									
+									<!--  ALTE STEUERSPALTE
 									<td class="text-right" t-if="o.invoice_line[0].invoice_line_tax_id">
 										<strong>
 											<span t-esc="', '.join(map(lambda x: x.name, o.invoice_line[0].invoice_line_tax_id))" />
 										</strong>
-									</td>
+									</td>-->
 									<td class="text-right">
 										<strong>Total sum</strong>
 									</td>
@@ -444,10 +452,17 @@
 										<span
 											t-esc="get_standard_price(o.amount_untaxed, o.partner_id.lang, o.currency_id)" />
 									</td>
+																		<!--  NEUE STEUERSPALTE -->
+									<td class="text-right" t-foreach="o.tax_line" t-as="tax_line">
+										<strong>
+											<span t-esc="get_standard_price(tax_line.amount, o.partner_id.lang, o.currency_id)" />
+										</strong>
+									</td>
+									<!--  ALTE STeuerspalte
 									<td class="text-right" t-if="o.invoice_line[0].invoice_line_tax_id">
 										<span
 											t-esc="get_standard_price(o.amount_tax, o.partner_id.lang, o.currency_id)" />
-									</td>
+									</td>-->
 									<td class="text-right">
 										<span
 											t-esc="get_standard_price(o.amount_total, o.partner_id.lang, o.currency_id)" />
