--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -121,15 +121,13 @@
 							<div class="row col-xs-12 returnaddress">
 								<h t-field="o.company_id.name" />
 								-
-								<h t-field="o.company_id.street" />
+								<span t-field="o.company_id.street" />
 								<span t-if="o.company_id.eq_house_no">
-									<h>&#xa0;</h>
 									<span t-field="o.company_id.eq_house_no" />
 								</span>
 								-
-								<h t-field="o.company_id.zip" />
-								<h>&#xa0;</h>
-								<h t-field="o.company_id.city" />
+								<span t-field="o.company_id.zip" />
+								<span t-field="o.company_id.city" />
 							</div>
 							<!--<span><strong>Customer Address:</strong></span> -->
 						</div>
@@ -142,20 +140,18 @@
 							<span t-field="o.partner_id.name" style="clear:left;" />
 							<div>
 								<span t-field="o.partner_id.street" />
-								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no"
-									style="margin-left:0.1cm;" />
+								<span t-if="o.partner_id.eq_house_no" t-field="o.partner_id.eq_house_no" />
 							</div>
 							<div t-if="o.partner_id.street2">
 								<div t-field="o.partner_id.street2" />
 							</div>
 							<h>
-								<h t-field="o.partner_id.zip" />
-								<h>&#xa0;</h>
-								<h t-field="o.partner_id.city" />
-								<h t-if="o.partner_id.eq_citypart">
+								<span t-field="o.partner_id.zip" />
+								<span t-field="o.partner_id.city" />
+								<span t-if="o.partner_id.eq_citypart">
 									-
-									<h t-field="o.partner_id.eq_citypart" />
-								</h>
+									<span t-field="o.partner_id.eq_citypart" />
+								</span>
 							</h>
 							<div t-field="o.partner_id.country_id.name" />
 							<!--<div style="clear:left;" t-field="o.partner_id" t-field-options="{&quot;widget&quot;: 
