--- a/equitania/views/eq_report_stockpicking.xml
+++ b/equitania/views/eq_report_stockpicking.xml
@@ -394,13 +394,18 @@
 		</template> -->
 
 
+		<template id="report_picking_document" active="True">
+			<t t-foreach="docs" t-as="o">
+				<t t-call="equitania.external_layout_stock_picking">
+					<t t-call="equitania.report_picking_data"></t>
+				</t>
+			</t>
+		</template>
+
+
 		<template id="stock.report_picking" active="True">
 			<t t-call="report.html_container">
-				<t t-foreach="docs" t-as="o">
-					<t t-call="equitania.external_layout_stock_picking">
-						<t t-call="equitania.report_picking_data"></t>
-					</t>
-				</t>
+	            <t t-raw="translate_doc(doc_id, doc_model, 'partner_id.lang', 'equitania.report_picking_document')"/>
 			</t>
 		</template>
 
